# agent-manager

./: .eslintrc.json  .gitignore  AGENTS.md  ARCHITECTURE_UPGRADE_PLAN.md  HOMEBREW_DISTRIBUTION.md  README.md  claude-sonnet-4.6-architecture-review.md  electron-builder.yml  file-preview.html  glm-5-architecture-review.md  homebrew-tap-README.md  index.html  kimi2.5-项目架构评审报告.md  neutralino.config.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
.github/: release-template.md
docs/: .pending_logs.md  BAD_CASES.md  ELECTRON_REWRITE_PLAN.md  HOMEBREW_CASK_GUIDE.md  INSTALL_SCRIPT.md  MIGRATION-GUIDE.md  MIGRATION-PROGRESS.md  MIGRATION-TODO.md  NEUTRALINO-IMPLEMENTATION-REPORT.md  NEUTRALINO-MIGRATION-SUMMARY.md  PROJECT_ISSUES.md  PROJECT_RESEARCH.md  README.md  RUST-ADAPTER-GUIDE.md  RUST-BACKEND-TEST-REPORT.md  SESSION_VIEWER_PLAN.md  VERSION_MANAGEMENT.md  neutralino-packaging-guide.md  packaging-deployment-guide.md  rust-performance-comparison.md  rust-terminal-integration.md  storage-solution-design.md  uat-test-plan.md
e2e/: electron-smoke.e2e.ts
electron/: entry.js  main.ts  preload.ts
homebrew-cask/: yes-sessions.rb
rust-service/: .env.example  Cargo.toml  README.md  test-api.sh
rust-service/src/: main.rs
rust-service/src/api/: file.rs  mod.rs  sessions.rs  settings.rs  shell.rs  terminal.rs  tree.rs
rust-service/src/storage/: claude.rs  codebuddy.rs  mod.rs  opencode.rs
rust-service/src/terminal/: mod.rs
rust-service/src/watcher/: mod.rs
(+230 files in other folders)
